<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/icon_homepage"
            android:title="@string/inicio_drawer" />
        <item
            android:id="@+id/nav_mis_favores"
            android:icon="@drawable/icon_favores"
            android:title="@string/favores_drawer" />
        <item
            android:id="@+id/nav_comunidades"
            android:icon="@drawable/community"
            android:title="@string/comunidades_drawer" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/icon_chats"
            android:title="Chats" />
    </group>

    <item android:title="Opciones">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/opcions"
                android:icon="@drawable/icon_ajustes"
                android:title="@string/ajustes_drawer" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/icon_smartphone_bloqueado"
                android:title="@string/logout_drawer" />
        </menu>
    </item>

</menu>
