<?xml version="1.0" encoding="utf-8"?>
<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team.a404.qommunity.ModificaUsuario">

    <Button
        android:id="@+id/cambia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorAccent"
        android:text="@string/modificaruser"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="170dp">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificanombre" />

        <EditText
            android:id="@+id/nombremodifica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/numeromod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numeromodifica" />

        <EditText
            android:id="@+id/numeromodifica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imagen"
        android:layout_width="117dp"
        android:layout_height="95dp"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/b1257038ce0a31052c74f7e7803d46d9" />

    <Button
        android:id="@+id/imagenperfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/botoncambiaimagen"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorAccent"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>
</android.widget.FrameLayout>
